# luten

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  build.rs
ci/: .env.travis  50-line_length.sh  check-basic-style.sh
luten-scheduling/: Cargo.toml
luten-scheduling/examples/: playground.rs
luten-scheduling/src/: instances.rs  lib.rs  types.rs  util.rs
luten-scheduling/src/instances/: mod.rs  random.rs
migrations/20170817130557_create_users/: down.sql  up.sql
migrations/20170817140023_create_sessions/: up.sql
migrations/20170817210507_create_passwords/: down.sql  up.sql
migrations/20170903155219_user_roles/: down.sql  up.sql
migrations/20170904101229_create_app_state/: down.sql  up.sql
migrations/20170906160355_create_timeslots/: down.sql  up.sql
migrations/20170906213239_create_prep_student_preferences/: down.sql  up.sql
migrations/20170913154504_create_timeslot_prefs/: down.sql  up.sql
scss/: _admin_panel.scss  _header.scss  _login.scss  _prep.scss  main.scss
src/: config.rs  dict.rs  errors.rs  lib.rs  main.rs  password.rs  special_routes.rs  util.rs
src/admin_panel/: html.rs  mod.mauzi.rs  mod.rs  routes.rs
src/api/: mod.rs
src/api/routes/: user.rs
src/db/: mod.rs  schema.rs  types.rs
src/login/: html.rs  ldap.rs  mod.mauzi.rs  mod.rs  password.rs  provider.rs  routes.rs
src/prep/: html.rs  mod.mauzi.rs  mod.rs  routes.rs
src/route/: mod.rs
src/special/: catchers.rs  mod.rs  routes.rs
src/state/: mod.rs
src/template/: mod.rs
src/timeslot/: mod.mauzi.rs  mod.rs
src/user/: mod.rs  routes.rs
testing/: main.css  phase1.html  reload-browser.sh  watch.sh
timeslot-algo/: Cargo.toml
timeslot-algo/src/: lib.rs
ts/: package-lock.json  package.json  webpack.config.js
ts/src/: Internal.ts  Lib.ts  Prep.ts  Util.ts
