[package]
name = "luten"
version = "0.1.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]

[profile.dev]
codegen-units = 4

[dependencies]
diesel = { version = "0.15.0", features = ["postgres", "chrono"] }
diesel_codegen = { version = "0.15.0", features = ["postgres"] }
dotenv = "0.9.0"
maud = { version = "0.17", features = ["rocket"] }
r2d2 = "0.7.3"
r2d2-diesel = "0.15.0"
rocket = "0.3.1"
rocket_codegen = "0.3.1"
rocket_contrib = "0.3.1"
