[package]
name = "luten"
version = "0.1.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]

[profile.dev]
codegen-units = 4

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "0.15.0", features = ["postgres", "chrono"] }
diesel_codegen = { version = "0.15.0", features = ["postgres"] }
dotenv = "0.9.0"
# Replace this with crates.io version once merged
hex = { git = "https://github.com/LukasKalbertodt/rust-hex", branch = "bump-030" }
maud = { version = "0.17", features = ["rocket"] }
pwhash = "0.1.2"
r2d2 = "0.7.3"
r2d2-diesel = "0.15.0"
rand = "0.3.16"
rocket = "0.3.1"
rocket_codegen = "0.3.1"
rocket_contrib = "0.3.1"
# serde = "1.0.11"
# serde_derive = "1.0.11"
